# react-native-nitro-file-system

./: README.md  README_zh.md  nitro.json  package.json  react-native-nitro-file-system.podspec  tsconfig.json
android/: CMakeLists.txt  OnLoad.cpp  build.gradle
android/src/main/java/com/margelo/nitro/node_fs/: NitroFileSystemPackage.java  NitroFileSystemUtils.java
cpp/: HybridDirIterator.cpp  HybridDirIterator.hpp  HybridFileSystem.cpp  HybridFileSystem.hpp  HybridFileWatcher.cpp  HybridFileWatcher.hpp  rust_c_file_system.h
docs/: fs_compatibility_audit.md
ios/: NitroFileSystemUtils.h  NitroFileSystemUtils.mm
ios/Frameworks/RustFileSystem.xcframework/: Info.plist
ios/Frameworks/RustFileSystem.xcframework/ios-arm64/RustFileSystem.framework/: RustFileSystem
ios/Frameworks/RustFileSystem.xcframework/ios-arm64/RustFileSystem.framework/Headers/: rust_c_file_system.h
ios/Frameworks/RustFileSystem.xcframework/ios-arm64_x86_64-simulator/RustFileSystem.framework/: Info.plist  RustFileSystem
ios/Frameworks/RustFileSystem.xcframework/ios-arm64_x86_64-simulator/RustFileSystem.framework/Headers/: rust_c_file_system.h
src/: Dir.ts  FSWatcher.ts  ReadStream.ts  WriteStream.ts  index.ts  native.ts
src/specs/: HybridDirIterator.nitro.ts  HybridFileSystem.nitro.ts  HybridFileWatcher.nitro.ts
